<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- TODO: Remove or change this placeholder text -->


    <string name="goback">&lt;&lt; Go back </string>
    <string name="navigating_back">Navigating Back </string>
    <string name="open">Open navigation drawer </string>
    <string name="close">Close navigation drawer </string>


    <string name="forgot_password_texts"> Don\'t worry, we just need your registered email address. </string>
    <string name="forgot_password_recovery_mail"> Recovery link sent successfully in your registered email address </string>
    <string name="forgot_password_notes"> <b>Note:</b> We recommend that you keep your password don\'t share it with anyone.</string>
    <string name="forgot_password_check">Check your email inbox after clicking the button above.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>