<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C0C25"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="55dp"
        android:paddingRight="25dp">


        <TextView
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:gravity="center_horizontal"
            android:text="OnlineShop"
            android:textColor="#fff"
            android:textSize="40sp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="FORGOT PASSWORD?"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password_texts"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password_notes"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

             <EditText
                android:id="@+id/reset_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="Enter Registered Email Address"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_password_sendlink_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/link_blue"
            android:padding="12dp"
            android:text="Send Link to reset "
            android:textSize="20sp" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_marginBottom="25dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp" />




        <LinearLayout
            android:id="@+id/reset_password_linearlayout"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mailsentimage"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:src="@drawable/mailsent" />

            <TextView
                android:id="@+id/mailsentText"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/mailsentimage"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password_recovery_mail"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/reset_password_check_textview"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password_check"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/reset_password_goback_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/goback"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />



    </LinearLayout>


</RelativeLayout>







